--- a/.github/workflows/blueprint.yml
+++ b/.github/workflows/blueprint.yml
@@ -50,8 +50,8 @@ jobs:
             .lake/build/doc/Std
           key: Docs-${{ hashFiles('lake-manifest.json') }}
 
-      - name: Build project API documentation
-        run: ~/.elan/bin/lake -R -Kenv=dev build QuadraticForms:docs
+      # - name: Build project API documentation
+      #   run: ~/.elan/bin/lake -R -Kenv=dev build QuadraticForms:docs
       
       - name: Check for `home_page` folder # this is meant to detect a Jekyll-based website
         id: check_home_page
